# django-hijack

./: .bumpversion.cfg  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .stylelintrc.json  .travis.yml  AUTHORS  CHANGELOG.txt  CONTRIBUTING.md  DESCRIPTION  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  gulpfile.js  manage.py  mkdocs.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test  test_requirements.txt  tox.ini  upload.sh  webpack.config.js
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  about.md  configuration.md  customization.md  index.md  mkdocs.yml  security.md  signals.md  troubleshooting.md
hijack/: __init__.py  admin.py  apps.py  checks.py  conf.py  decorators.py  forms.py  helpers.py  hijack-styles.css  middleware.py  models.py  permissions.py  settings.py  signals.py  urls.py  views.py
hijack/contrib/admin/: __init__.py  admin.py  apps.py
hijack/contrib/admin/templates/hijack/contrib/admin/: button.html
hijack/locale/cs/LC_MESSAGES/: django.mo  django.po
hijack/locale/da/LC_MESSAGES/: django.mo  django.po
hijack/locale/de/LC_MESSAGES/: django.mo  django.po
hijack/locale/en/LC_MESSAGES/: django.mo  django.po
hijack/locale/es/LC_MESSAGES/: django.mo  django.po
hijack/locale/fr/LC_MESSAGES/: django.mo  django.po
hijack/locale/ja/LC_MESSAGES/: django.po
hijack/locale/jp/LC_MESSAGES/: django.po
hijack/locale/nl/LC_MESSAGES/: django.mo  django.po
hijack/locale/pl/LC_MESSAGES/: django.po
hijack/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
hijack/locale/ru/LC_MESSAGES/: django.mo  django.po
hijack/locale/sk/LC_MESSAGES/: django.mo  django.po
hijack/management/commands/: hello.py
hijack/static/hijack/: hijack-scripts.js  hijack-styles.css  hijack-styles.scss  hijack.css  hijack.js  hijack.mjs  hijack.scss
hijack/static/hijack/__tests__/: hijack.test.js
hijack/templates/hijack/: admin_button.html  notification.html  notifications.html  notifications_bootstrap.html  snackbar.html
hijack/templatetags/: hijack.py  hijack_tags.py
hijack/tests/: checks_tests.py  conftest.py  factories.py  hijack_tests.py  manage_settings.py  models_tests.py  runtests.py  south_settings.py  te-x-st_hijack.py  test_admin.py  test_checks.py  test_forms.py  test_hijack.py  test_hijack_url_settings.py  test_middleware.py  test_permissions.py  test_settings.py  test_templatetags.py  test_urls.py  test_views.py  urls.py  utils.py
hijack/tests/test_app/: admin.py  authorization_checks.py  custom_hijack.py  decorators.py  models.py  permissions.py  routers.py  settings.py  urls.py  views.py
hijack/tests/test_app/templates/: hello.html  hello_filter.html  user_list.html  user_list_tag.html
tests/: conftest.py  test_admin.py  test_middleware.py  test_signals.py  test_templatetags.py  test_views.py
tests/__tests__/: hijack.test.js
tests/test_app/: settings.py  urls.py  views.py
tests/test_app/templates/: bye_bye.html  user_list.html
