[build-system]
requires = ["flit-gettext", "flit_scm", "wheel"]
build-backend = "flit_gettext.scm"

[project]
name = "django-hijack"
authors = [
  { name = "arteria GmbH", email = "admin@arteria.ch" },
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Markdown", "Django", "email", "templates", "HTML"]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
]
requires-python = ">=3.8"
dependencies = ["django>=4.2"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-django",
]
lint = [
  "bandit==1.7.8",
  "black==24.4.2",
  "flake8==7.0.0",
  "isort==5.13.2",
  "msgcheck==4.0.0",
  "pydocstyle==6.3.0",
]
docs = [
  "mkdocs==1.6.0",
]

[project.urls]
Project-URL = "https://github.com/django-hijack/django-hijack"
Changelog = "https://github.com/django-hijack/django-hijack/releases"

[tool.flit.module]
name = "hijack"

[tool.setuptools_scm]
write_to = "hijack/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --tb=short -rxs"
testpaths = ["hijack/tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "error::RuntimeWarning",
]

DJANGO_SETTINGS_MODULE = "hijack.tests.test_app.settings"

[tool.coverage.run]
source = ["hijack"]
omit = ["hijack/tests/*", "hijack/_version.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.isort]
atomic = true
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "hijack"
default_section = "THIRDPARTY"
combine_as_imports = true

[tool.pydocstyle]
add_ignore = "D1"
