[options]
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=hijack
DJANGO_SETTINGS_MODULE=hijack.tests.test_settings

[coverage:report]
show_missing = True
skip_covered = True
skip_empty = True

[flake8]
ignore = F999,E501,E128,E124
exclude = .git,*/migrations/*,*/static/CACHE/*
