[metadata]
name = django-hijack
author = arteria GmbH
author_email = admin@arteria.ch
description = django-hijack allows superusers to hijack (=login as) and work on behalf of another user.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/django-hijack/django-hijack
license = MIT
license_files = LICENSE
platforms =
    OS Independent
keywords =
    django
    hijack
    support
    customer support
    debugging
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = hijack
install_requires =
    django>=3.2
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django

[tool:pytest]
addopts = --cov --tb=short
testpaths =
    hijack
filterwarnings =
    error
    ignore::PendingDeprecationWarning
DJANGO_SETTINGS_MODULE = hijack.tests.test_app.settings

[coverage:run]
source = hijack
omit =
    hijack/tests/*

[coverage:report]
show_missing = True
skip_covered = True

[flake8]
max_line_length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[isort]
atomic = true
line_length = 88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_first_party = hijack
default_section=THIRDPARTY
combine_as_imports = true

[pydocstyle]
add_ignore = D1
